--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,7 @@ dependencies = [
     "parse>=1.20.2",
     "pulp>=3.3.0",
     "rich>=14.2.0",
+    "scikit-image>=0.25.2",
     "scipy>=1.16.3",
+    "tqdm>=4.67.1",
 ]
