--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.3.3",
     "parse>=1.20.2",
     "pulp>=3.3.0",
+    "pydot>=4.0.1",
     "rich>=14.2.0",
     "scikit-image>=0.25.2",
     "scipy>=1.16.3",
